@@ -13,6 +13,7 @@ Bugs fixed in 3.0Beta2:
 [1450484] Trialing garbage in tooltip text fixed (DK).
 [1462527] Uses a decent PRNG for non-XP platforms, closing key recovery
 attack vulnerability.
+[1446183] Export to v2 format now readable by pwsafe v2.x
 [1463103] Fields in Edit Dialog are wider.
 [1450486] URLs without a protocol now default to http.
 
